--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
   <h1>My Portfolio - Projects</h1>
-  <p>Here's a list of some projects I've worked on:</p>
+  <p>Here's a list of some projects I've worked on, including this portfolio page itself!</p>
 
   <table>
     <thead>
@@ -48,6 +48,13 @@
       </tr>
     </thead>
     <tbody>
+      <tr>
+        <td>0</td>
+        <td>Index</td>
+        <td>This portfolio page showcasing my projects.</td>
+        <td><a href="https://github.com/Mayank442000/FunProjects">Github Source (Repo)</a></td>
+        <td><a href="https://mayank442000.github.io/FunProjects/">Github Pages (this page)</a></td>
+      </tr>
       <tr>
         <td>1</td>
         <td>Conway's Game of Life</td>
@@ -62,7 +69,7 @@
         <td><a href="https://github.com/Mayank442000/FunProjects/tree/main/College/Society/UUCSS/5th%20Sem/MySampleSite%20-%20Copy">Github Source</a></td>
         <td><a href="https://mayank442000.github.io/FunProjects/College/Society/UUCSS/5th%20Sem/MySampleSite%20-%20Copy/">View Online</a></td>
       </tr>
-      </tbody>
+    </tbody>
   </table>
 </body>
 </html>
