--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
       font-weight: bold;
     }
     a {
-      color: #333;
-      text-decoration: none;
+      color: #666;
+      text-decoration: underline;
     }
     a:hover {
       color: #007bff;
+      text-decoration: none;
     }
   </style>
 </head>
