--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <td>Conway's Game of Life</td>
         <td>A cellular automata simulation where cells come alive or die based on surrounding neighbors.</td>
         <td><a href="https://github.com/Mayank442000/FunProjects/tree/main/Conway's%20Game%20of%20Life">Github Source</a></td>
-        <td><a href="https://mayank442000.github.io/FunProjects/Conway's%20Game%20of%20Life/">View on Github Pages</a></td>
+        <td><a href="https://mayank442000.github.io/FunProjects/Conway's%20Game%20of%20Life/">View online</a></td>
       </tr>
       <tr>
         <td>2</td>
