--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   </style>
 </head>
 <body>
-  <h1>My Portfolio - Projects</h1>
-  <p>Here's a list of some projects I've worked on, including this portfolio page itself!</p>
+  <h1>Fun Projects</h1>
+  <p>Here's a list of some projects I've worked on!</p>
 
   <table>
     <thead>
