--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio - Projects</title>
+  <title>Fun Projects</title>
   <style>
     /* Basic styles for a clean and professional look */
     body {
